--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">KusaStore</string>
+    <string name="app_name">kusastore</string>
+    <string name="txt_username">Ingrese su usuario</string>
+    <string name="txt_password_hint">Ingrese su contraseña</string>
+    <string name="btn_login_hint">Iniciar Sesion</string>
+    <string name="login">Login</string>
 </resources>
