--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="lema">Shop a large selection of officially licensed anime figures</string>
     <string name="pregunta">Ya tienes cuenta? Inica sesion</string>
     <string name="registrate_ahora">Registrate ahora!</string>
+    <string name="registrar">Registrar</string>
 </resources>
